2007-10-01  Mark Rowe  <mrowe@apple.com>

        * BuildSlaveSupport/build-launcher-dmg: Tweak once more to handle nightly builds for branches.

2007-10-02  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Roben.
        
        Make pixel tests more useful!
        Finally fix the image diff 0.00% mystery problem
        Highlight any image differences in the image diff.
        Add a link from image diffs back to original test file.

        * DumpRenderTree/mac/ImageDiff.m:
        (compareImages): highlight any differences
        (computePercentageDifferent): round to two decimal places
        * Scripts/run-webkit-tests: add a few more toURL calls for the windows folks

2007-10-02  Eric Seidel  <eric@webkit.org>

        Reviewed by Alexey Proskuryakov.

        * Scripts/run-webkit-tests: print the % image difference on main results page

2007-10-02  Mark Rowe  <mrowe@apple.com>

        Reviewed by Oliver.

        Update WebKitLauncher to notify you of new builds from the correct branch, rather than always checking trunk.

        * BuildSlaveSupport/build-launcher-app: Generate a file named BRANCH into WebKit.app so that it knows which branch it was built from.
        * WebKitLauncher/start.html: Use the new URL format that includes the branch we were built from.

2007-10-01  Mark Rowe  <mrowe@apple.com>

        * BuildSlaveSupport/build-launcher-dmg: Tweak once more to handle nightly builds for branches.

2007-09-25  Eric Seidel  <eric@webkit.org>

        Reviewed by Mark Rowe.
        
        DerivedSources.make was finding "ENABLE_SVG" in the string
        "ENABLE_SVG_EXPERIMENTAL_FEATURES" thus --no-svg wasn't functioning
        quite correctly.

        * Scripts/build-webkit: make --no-svg imply --no-svg-experimental

2007-09-25  Mark Rowe  <mrowe@apple.com>

        Rubber-stamped by Eric.

        * BuildSlaveSupport/build-launcher-dmg: Allow the platform tag to be specified on the command line.