@@ -1,3 +1,13 @@
+2007-10-02  Lars Knoll  <lars@trolltech.com>
+
+        Reviewed by Maciej.
+
+        Add support for eventSender.mouseMove to DRT.
+        Fixes fast/css/hover-affects-child.html
+
+        * DumpRenderTree/DumpRenderTree.qtproj/jsobjects.cpp:
+        (EventSender::mouseMoveTo):
+
 2007-10-01  Mark Rowe  <mrowe@apple.com>
 
         * BuildSlaveSupport/build-launcher-dmg: Tweak once more to handle nightly builds for branches.
